register/signup has worked

--- a/ImPossibleSystem/templates/signup.html
+++ b/ImPossibleSystem/templates/signup.html
@@ -42,14 +42,8 @@
          <hr class="break">
          <div class="login__inputs">
             <div class="login__box">
-               <input type="text" placeholder="First Name" required class="login__input" id="firstName" name="firstName">
-               <label for="firstName" class="login__label"></label>
-            </div>
-
-            <div class="login__box">
-               <input type="text" placeholder="Last Name" required class="login__input" id="lastName" name="lastName">
-               <label for="lastName" class="login__label"></label>
-
+               <input type="text" placeholder="Username" required class="login__input" id="username" name="username">
+               <label for="Username" class="login__label"></label>
             </div>
 
             <div class="login__box">
