fixed errors hehe

--- a/ImPossibleSystem/ImPossibleSystem/static/css/login.css
+++ b/ImPossibleSystem/ImPossibleSystem/static/css/login.css
@@ -200,6 +200,17 @@ img {
 .login__register a:hover {
   text-decoration: underline;
 }
+.messages {
+  margin: 10px 0;
+}
+
+.alert {
+  background-color: #f8d7da; /* Light red background */
+  color: #721c24; /* Dark red text */
+  padding: 10px;
+  border: 1px solid #f5c6cb; /* Light red border */
+  border-radius: 5px;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For medium devices */
