--- a/ImPossibleSystem/ImPossibleSystem/static/css/signup.css
+++ b/ImPossibleSystem/ImPossibleSystem/static/css/signup.css
@@ -34,6 +34,18 @@ a {
   text-decoration: none;
 }
 
+.login__login {
+  font-size: var(--small-font-size);
+}
+.login__login a {
+  color: black;
+  font-weight: 500;
+  text-decoration: underline;
+}
+
+.login__login a:hover {
+  text-decoration: underline;
+}
 img {
   display: block;
   max-width: 100%;
@@ -62,11 +74,11 @@ img {
   position: relative;
   margin-inline: 1.5rem;
   background-color: whitesmoke;
-  border: 2px solid hsla(0, 0%, 100%, .7);
   padding: 1rem 1rem;
   color: black;
   border-radius: 1rem;
   backdrop-filter: blur(40px);
+
 }
 
 .log__header {
@@ -157,6 +169,12 @@ img {
   padding: 0.1rem 1rem;
 }
 
+.ParkSense {
+  position: fixed; /* Keep the button fixed in position */
+  bottom: 20px;   /* Distance from the bottom */
+  right: 20px;    /* Distance from the right */
+
+}
 
 
 /*=============== BREAKPOINTS ===============*/
@@ -173,3 +191,8 @@ img {
     margin-bottom: 2rem;
   }
 }
+
+
+
+
+
